# gavrilova_a_y

./: CMakeLists.txt  README.md  build.vs.2019.cmake
prj.labs/: CMakeLists.txt
prj.labs/control_work/: CMakeLists.txt  control_work.cpp  control_work.report.md.in.txt
prj.labs/lab01/: lab01.cpp  lab01.report.md.in.txt
prj.labs/lab02/: CMakeLists.txt  lab02.cpp  lab02.report.md.in.txt
prj.labs/lab03/: CMakeLists.txt  lab03.cpp  lab03.report.md.in.txt
